# Fugaku-Particle-Filter

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  Dockerfile  LICENSE  MelissaConfig.cmake.in  MelissaDAConfig.cmake.in  README.md  build-and-test.sh  compile.sh  compileall.sh  config.fti  diff.py  launcher  melissa-da_set_env.sh.in  melissa_da_set_env.sh.in  patch-PDAF-D_V1.14.txt  run-pdaf-simulation1.sh  run-simulation2-pdaf-srun.sh  run-simulation2-pdaf.sh  test-all.sh  test.sh  uncrustify.cfg  uncrustify.sh  walltimes.odg
api/: ApiTiming.h  CMakeLists.txt  StateServer.cxx  api_common.cxx  api_common.h  chunk_based.cxx  compile.sh  melissa_api.cxx  melissa_api.f90  melissa_api.h  melissa_api.i.f90  melissa_da_api.cxx  melissa_da_api.h  melissa_da_api.i.f90  melissa_da_api.py  melissa_p2p.cxx  melissa_p2p.h  melissa_p2p_app_core.cxx  storage_controller.cxx
api/p2p/: PythonInterface.h  app_core.cxx  app_core.h  peer_controller.cxx  peer_controller.h  storage_controller.cxx  storage_controller.h
api/p2p/StorageController/: core.cxx  fti_controller.cxx  fti_controller.hpp  fti_interface.cxx  fti_interface.h  fti_interface.hpp  fti_kernel.cxx  fti_kernel.hpp  helpers.cpp  helpers.h  helpers.hpp  io_controller.cxx  io_controller.h  io_controller.hpp  io_controller_defs.hpp  load_store.cxx  mpi_controller.cxx  mpi_controller.hpp  mpi_controller_impl.cxx  mpi_controller_impl.hpp  peer_controller.cxx  peer_controller.cxx.bak  peer_controller.h  peer_controller.hpp  request.cxx  storage_controller.cxx  storage_controller.h  storage_controller.hpp  storage_controller_impl.cxx  storage_controller_impl.hpp  storage_controller_requests.cxx  worker_requests.cxx  zip_controller.cxx  zip_controller.hpp
arch/: README.md
common/: CMakeLists.txt  Part.cxx  Part.h  TimingEvent.cxx  TimingEvent.h  ZeroMQ.cxx  ZeroMQ.h  comm4py.c  melissa-da_config.h.in  melissa_comm4py.c  melissa_da_config.h.in  melissa_da_stype.h  melissa_messages.c  melissa_utils.c  melissa_utils.h  memory.h  messages.h  n_to_m.cxx  n_to_m.h  utils.cxx  utils.h
common/protocol/: CMakeLists.txt  README.md  p2p.proto  p2p_pb2.py
examples/: CMakeLists.txt  check_stateless.sh
examples/lorenz/: CMakeLists.txt  calculate_weight.py  compression-fpzip.json  compression-hp-sp.json  compression-zfp-accuracy.json  compression-zfp-precision.json  compression.json  lorenz.cpp  lorenz.cxx  lorenz_obs.cxx  prepare.sh  script.py  usage_limits.sh
examples/lorenz/experiments/: lorenz_128MB_validate.pjsub  lorenz_16MB_validate.pjsub  lorenz_32MB_validate.pjsub  lorenz_512KB_1024.pjsub  lorenz_512MB_512.pjsub  lorenz_64MB_validate.pjsub  lorenz_8192MB_512.pjsub  (+4 more)
examples/p2p/: README.md  Traces.ipynb  calculate_weight.py  config-runner.fti  r2.py  runner.py  script.py  script_assimilate_python.py  simulation.cxx  simulation.py
examples/parflow-pure/: Runtime-Measurement-Validation.ipynb  Walltime for state Propagation - Parflow, an iterative solver.ipynb  run.sh
examples/simulation1/: CMakeLists.txt  README.md  compare.sh  functions.py  killing-giraffe.sh  reference-empty-hidden-index-map.csv  reference-empty-index-map.csv  reference-giraffe-hidden.txt  reference-hidden-index-map.csv  reference.txt  run-launcher.sh  run-srun.sh  run.sh  script.py  script_assimilate_python.py  set_val.sh  simulation.cxx  test-all.sh  test-fault-tolerance.sh  test-size.sh  tests.py
examples/simulation2-pdaf/: CMakeLists.txt  config.fti  diff.py  initialize.F90  integrate.F90  main.F90  measure_time_update_step.py  mod_model.F90  mod_parallel_model.F90  run-simulation2-pdaf-srun.sh  run-simulation2-pdaf.sh  script.py  script_enkf.py  test.sh  tests.py  tests_slurm.py
examples/simulation3-empty/: CMakeLists.txt  README  options.sh  run-juwels.sh  run-with-repex.sh  run.sh  runall.sh  script.py  script_slurm.py  simulation.cxx  test-size.sh
examples/simulation4-big-empty/: run-juwels.sh  run-with-repex.sh  run.sh  runall.sh
examples/simulation4-p2p/: CMakeLists.txt  calculate_weight.py  script.py  simulation.cxx  simulation.py
examples/simulation5-python/: CMakeLists.txt  script.py  simulation.py
ext_pdaf/: CMakeLists.txt
launcher/: CMakeLists.txt  melissa_da_study.py  utils.py
launcher/cluster/: __init__.py  cluster.py  fugaku.py  local_cluster.py  slurm.py  slurm_juwels.py  slurm_mn4.py
pdaf-core/: CMakeLists.txt  libpdaf.ld
pdaf-simulation1/: CMakeLists.txt  initialize.F90  integrate.F90  mod_model.F90
pdaf-wrapper/: CMakeLists.txt  Makefile  PDAFAssimilator.cxx  c_wrapper.F90  finalize_pdaf.F90  init_parallel_pdaf.F90  init_pdaf.F90  mod_parallel_model.F90  mod_parallel_pdaf.F90  pdaf-wrapper.h
pdaf-wrapper/user/: add_obs_error_pdaf.F90  init_dim_obs_f_pdaf.F90  init_dim_obs_pdaf.F90  init_ens.F90  init_ens_hidden.F90  mod_model.F90  next_observation_pdaf.F90  prepoststep_ens_pdaf.F90
server/: Assimilator.cxx  Assimilator.h  CMakeLists.txt  CheckStatelessAssimilator.cxx  CheckStatelessAssimilator.h  DummyAssimilator.cxx  DummyAssimilator.h  EmptyAssimilator.cxx  EmptyAssimilator.h  EnsembleMember.cxx  EnsembleMember.h  FTmodule.cxx  FTmodule.h  FTthreadManager.cxx  FTthreadManager.h  Field.cxx  Field.h  LauncherConnection.cxx  LauncherConnection.h  MpiManager.cxx  MpiManager.h  PDAFAssimilator.cxx  PDAFAssimilator.h  PDAFEnKFAssimilator.cxx  PDAFEnKFAssimilator.h  PrintIndexMapAssimilator.cxx  PrintIndexMapAssimilator.h  PythonAssimilator.cxx  PythonAssimilator.h  ServerTiming.h  Timing.h  WrfAssimilator.cxx  WrfAssimilator.h  ZeroMQ.cxx  ZeroMQ.h  compile.sh  melissa_messages.c  melissa_messages.h  pdaf.h  server.cxx
test/: CMakeLists.txt  generate_references.py  melissa-da-cleanup-local.sh  melissa_da_testing.py  never_connecting_runner.sh  preload.cxx  reference-1000.txt  test-cleanup.py  test-cmds.py  test-crashing-runner.py  test-crashing-server.py  test-crashing-server1.py  test-crashing-server2.py  test-different-parallelism.py  test-never-connecting-runner.py  test-p2p-basic.py  test-unresponsive-runner.py  test_p2p_basic.py  test_python_assimilator.py  tests.py
(+122 files in other folders)
